--- a/apps/hono/package.json
+++ b/apps/hono/package.json
@@ -2,9 +2,10 @@
   "name": "hono",
   "type": "module",
   "scripts": {
-    "dev": "rollup -c --watch",
+    "dev": "pnpm dotenvx rollup -c --watch",
     "build": "rollup -c",
-    "start": "node dist/index.js"
+    "start": "pnpm dotenvx node dist/index.js",
+    "dotenvx": "../../scripts/dotenvx.sh"
   },
   "dependencies": {
     "@hono/node-server": "^1.19.5",
@@ -13,6 +14,7 @@
     "@repo/openapi": "workspace:*",
     "@repo/prisma": "workspace:*",
     "@repo/validation": "workspace:*",
+    "@t3-oss/env-core": "^0.13.8",
     "hono": "^4.9.10",
     "zod": "^4.1.12"
   },
