--- a/turbo.json
+++ b/turbo.json
@@ -2,6 +2,7 @@
   "$schema": "https://turborepo.com/schema.json",
   "ui": "tui",
   "globalEnv": ["NODE_ENV"],
+  "globalDependencies": ["scripts/**", ".env.*"],
   "tasks": {
     "build": {
       "dependsOn": ["^build"],
