--- a/packages/key-vault/package.json
+++ b/packages/key-vault/package.json
@@ -1,17 +1,14 @@
 {
-  "name": "@repo/utils",
+  "name": "@repo/key-vault",
   "version": "0.0.0",
   "private": true,
   "type": "module",
   "exports": {
-    ".": "./src/index.ts",
-    "./toBuffer": "./src/toBuffer.ts",
-    "./sha256": "./src/sha256.ts",
-    "./objectKeys": "./src/objectKeys.ts",
-    "./swapKeysAndValues": "./src/swapKeysAndValues.ts"
+    ".": "./src/index.ts"
   },
   "scripts": {
     "test": "vitest run unit --config __tests__/vitest.config.ts",
+    "test:integration": "vitest run integration --config __tests__/vitest.config.ts",
     "lint": "eslint .",
     "check-types": "tsc --noEmit"
   },
@@ -25,7 +22,13 @@
     "vitest": "^3.2.4"
   },
   "dependencies": {
+    "@azure/identity": "^4.13.0",
+    "@azure/keyvault-keys": "^4.10.0",
+    "@azure/keyvault-secrets": "^4.10.0",
+    "@repo/keys": "workspace:*",
     "@repo/enums": "workspace:*",
+    "@repo/utils": "workspace:*",
+    "@repo/mappers": "workspace:*",
     "typanion": "^3.14.0"
   }
 }
