--- a/packages/mappers/tsconfig.json
+++ b/packages/mappers/tsconfig.json
@@ -1,5 +1,5 @@
 {
   "extends": "@repo/typescript-config/base.json",
-  "include": ["src", "../utils/src/getJwkAsymetricSigningAlg.ts"],
+  "include": ["src"],
   "exclude": ["node_modules"]
 }
