--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -10,6 +10,7 @@
     "build": "pnpm barrel",
     "barrel": "../../scripts/barrel.ts",
     "test": "vitest run unit --config __tests__/vitest.config.ts",
+    "test:coverage": "vitest run unit --coverage --config __tests__/vitest.config.ts",
     "lint": "eslint .",
     "check-types": "tsc --noEmit"
   },
@@ -20,7 +21,8 @@
     "@types/node": "^22.5.2",
     "type-fest": "^5.0.1",
     "typescript": "^5.5.4",
-    "vitest": "^3.2.4"
+    "vitest": "^3.2.4",
+    "@vitest/coverage-v8": "3.2.4"
   },
   "dependencies": {
     "@repo/enums": "workspace:*",
