--- a/apps/console/package.json
+++ b/apps/console/package.json
@@ -5,8 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "next dev --turbopack",
-    "generate:client": "openapi-typescript ../hono/static/openapi.yml -o ./src/lib/api/v1.d.ts",
-    "build": "pnpm generate:client && next build --turbopack",
+    "build": "next build --turbopack",
     "start": "next start",
     "lint": "eslint"
   },
@@ -44,9 +43,6 @@
     "lucide-react": "^0.545.0",
     "next": "15.5.4",
     "next-themes": "^0.4.6",
-    "openapi-fetch": "^0.15.0",
-    "openapi-react-query": "^0.5.1",
-    "pg": "^8.16.3",
     "react": "19.1.0",
     "react-day-picker": "^9.11.1",
     "react-dom": "19.1.0",
