--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Run database migrations
         env:
-          DATABASE_URL: 'postgresql://postgres:postgres@localhost:5432/postgres?schema=public'
+          DATABASE_URL: 'postgresql://postgres:postgres@postgres:5432/postgres?schema=public'
         # Use the --filter flag to run the command in the correct package.
         run: pnpm --filter @repo/prisma db:migrate
 
@@ -56,7 +56,7 @@ jobs:
       - name: Run integration tests
         env:
           ENVIRONMENT: test
-          DATABASE_URL: 'postgresql://postgres:postgres@localhost:5432/postgres?schema=public'
+          DATABASE_URL: 'postgresql://postgres:postgres@postgres:5432/postgres?schema=public'
         run: pnpm test:integration
 
       - name: Log in to GitHub Container Registry
