--- a/apps/nestjs/package.json
+++ b/apps/nestjs/package.json
@@ -55,6 +55,7 @@
     "@types/supertest": "^6.0.2",
     "@types/webpack-node-externals": "^3.0.4",
     "globals": "^16.0.0",
+    "npm-run-all": "^4.1.5",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-loader": "^9.5.2",
