--- a/apps/nestjs/package.json
+++ b/apps/nestjs/package.json
@@ -4,12 +4,15 @@
   "type": "commonjs",
   "private": true,
   "scripts": {
-    "build": "nest build",
+    "build": "run-p build:*",
+    "build:nestjs": "nest build",
+    "build:pull-openapi-spec": "pnpm pull:openapi-spec",
     "dev": "pnpm dotenvx nest start --watch",
     "start": "pnpm dotenvx node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test:integration": "vitest run integration --config __tests__/vitest.config.mts",
-    "dotenvx": "../../scripts/dotenvx.sh"
+    "dotenvx": "../../scripts/dotenvx.sh",
+    "pull:openapi-spec": "../../scripts/pull.sh ../../packages/contract/generated/openapi.json static/openapi.json"
   },
   "dependencies": {
     "@azure/identity": "^4.13.0",
@@ -17,14 +20,15 @@
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/serve-static": "^5.0.4",
     "@repo/auth": "workspace:*",
     "@repo/contract": "workspace:*",
     "@repo/enums": "workspace:*",
-    "@repo/mappers": "workspace:*",
     "@repo/exception": "workspace:*",
     "@repo/key-vault": "workspace:*",
     "@repo/keys": "workspace:*",
     "@repo/logger": "workspace:*",
+    "@repo/mappers": "workspace:*",
     "@repo/prisma": "workspace:*",
     "@repo/utils": "workspace:*",
     "@repo/validation": "workspace:*",
@@ -40,10 +44,10 @@
     "@nestjs/cli": "^11.0.0",
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.1",
-    "@repo/typescript-config": "workspace:*",
     "@repo/eslint-config": "workspace:*",
-    "@repo/types": "workspace:*",
     "@repo/test-helpers": "workspace:*",
+    "@repo/types": "workspace:*",
+    "@repo/typescript-config": "workspace:*",
     "@simplewebauthn/server": "^13.2.2",
     "@swc/core": "^1.13.5",
     "@types/express": "^5.0.0",
@@ -51,6 +55,7 @@
     "@types/supertest": "^6.0.2",
     "@types/webpack-node-externals": "^3.0.4",
     "globals": "^16.0.0",
+    "npm-run-all": "^4.1.5",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-loader": "^9.5.2",
