--- a/apps/nestjs/package.json
+++ b/apps/nestjs/package.json
@@ -10,7 +10,8 @@
     "dev": "pnpm dotenvx nest start --watch",
     "start": "pnpm dotenvx node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test:integration": "vitest run integration --config __tests__/vitest.config.mts",
+    "test:integration": "vitest run ${1:-integration} --config __tests__/vitest.config.mts",
+    "test:integration:coverage": "vitest run ${1:-integration} --coverage --config __tests__/vitest.config.mts",
     "dotenvx": "../../scripts/dotenvx.sh",
     "pull:openapi-spec": "../../scripts/pull.sh ../../packages/contract/generated/openapi.json static/openapi.json"
   },
@@ -42,6 +43,7 @@
     "zod": "^4.1.12"
   },
   "devDependencies": {
+    "@vitest/coverage-v8": "3.2.4",
     "@nestjs/cli": "^11.0.0",
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.1",
