--- a/apps/nestjs/package.json
+++ b/apps/nestjs/package.json
@@ -43,7 +43,6 @@
     "zod": "^4.1.12"
   },
   "devDependencies": {
-    "@vitest/coverage-v8": "3.2.4",
     "@nestjs/cli": "^11.0.0",
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.1",
@@ -58,6 +57,8 @@
     "@types/qs": "^6.14.0",
     "@types/supertest": "^6.0.2",
     "@types/webpack-node-externals": "^3.0.4",
+    "@vitest/coverage-v8": "3.2.4",
+    "cbor": "^10.0.11",
     "globals": "^16.0.0",
     "jose": "^6.1.0",
     "npm-run-all": "^4.1.5",
