--- a/packages/key-vault/package.json
+++ b/packages/key-vault/package.json
@@ -22,6 +22,7 @@
     "@repo/typescript-config": "workspace:*",
     "@repo/virtual-authenticator": "workspace:*",
     "@repo/vitest-config": "workspace:*",
+    "@simplewebauthn/server": "^13.2.1",
     "@types/node": "^22.5.2",
     "type-fest": "^5.0.1",
     "typescript": "^5.5.4",
