--- a/packages/virtual-authenticator/package.json
+++ b/packages/virtual-authenticator/package.json
@@ -37,17 +37,18 @@
     "@simplewebauthn/server": "^13.2.1",
     "@simplewebauthn/types": "^12.0.0",
     "@types/node": "^22.5.2",
+    "ts-morph": "^27.0.2",
     "type-fest": "^5.0.1",
     "typescript": "^5.5.4",
     "vitest": "^3.2.4",
     "vitest-mock-extended": "^3.1.0"
   },
   "dependencies": {
-    "@repo/cbor": "workspace:*",
-    "@repo/http": "workspace:*",
     "@repo/assert": "workspace:*",
+    "@repo/cbor": "workspace:*",
     "@repo/crypto": "workspace:*",
     "@repo/exception": "workspace:*",
+    "@repo/http": "workspace:*",
     "@repo/prisma": "workspace:*",
     "@repo/types": "workspace:*",
     "@repo/utils": "workspace:*",
